namespace CrossPlatformLockEvents
{
    internal enum LockEventType
    {
        Screensaver,
        Suspend
    }
}